2006-08-09  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-message-area.c:
	* gedit/gedit-notebook.c:
	* gedit/gedit-panel.c:
	* gedit/gedit-statusbar.c:
	* gedit/gedit-view.c:

	use g_object_ref_sink, patch by John Luke.

2006-08-09  Paolo Borelli  <pborelli@katamail.com>

	* plugins/spell/gedit-spell-plugin.c: fix autospell state when
	switching tab.

2006-08-08  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c: fix a crash in recents file code.

=== gedit 2.15.6 ===

2006-08-07  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.15.6 released.

2006-08-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.[ch]:
	* gedit/gedit-window.c:

	use the has-selection property of GtkTextBuffer 2.10.

2006-08-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-view.c: use the indent-on-tab feature of sourceview 1.7.2

2006-08-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/recent-files/*:	throw away the eggs, they were past due.

	* gedit/gedit-window.[ch]:
	* gedit/gedit-tab.c:
	* gedit/gedit.c:

	New recent-files implementation using GtkRecent.

2006-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>
	
	* gedit/gedit-commands-file.c: changed opening of multiple files
	behavior (bug 143646), patch by Paolo Maggi
	* gedit/gedit-io-error-message-area.c: changed already opened message
	to reflect this new behavior

2006-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/filebrowser.schemas.in: moved default values 
	out of the locale tag because they shouldn't be translated
	
2006-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* gedit/gedit-window.c: added calling update_ui when editability 
	changes
	* plugins/snippets/snippets/SnippetController.py: added honoring the
	editability of the buffer
	
2006-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-browser-plugin.c:
	