@@ -85,6 +85,11 @@ fi
 
 AC_SUBST(PSPELL_LIBS)
 
+dnl ================================================================
+dnl libattr checks
+dnl ================================================================
+
+AC_CHECK_LIB(attr, attr_copy_fd)
 
 dnl ================================================================
 dnl Start of pkg-config checks
