@@ -1,3 +1,8 @@
+2006-08-11  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-document-saver.c: preserve xattrs, patch by James
+	Antill. Bug #350805.
+
 2006-08-09  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/gedit-message-area.c:
